--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,9 @@
         android:showAsAction="ifRoom|withText"
         android:icon="@android:drawable/ic_media_play"
         android:title="@string/get_joke"/>
+    <item
+        android:id="@+id/preferences"
+        android:showAsAction="never"
+        android:title="@string/settings"
+        />
 </menu>
