--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,6 +7,11 @@
         android:icon="@android:drawable/ic_media_play"
         android:title="@string/get_joke"/>
     <item
+        android:title="@string/action_share"
+        android:id="@+id/action_share"
+        android:showAsAction="ifRoom"
+        android:actionProviderClass="android.widget.ShareActionProvider" />
+    <item
         android:id="@+id/preferences"
         android:showAsAction="never"
         android:title="@string/settings"
